fixing scrollbar for only activities section

--- a/style.css
+++ b/style.css
@@ -105,28 +105,9 @@ body {
     border-radius: 1rem;
     z-index: 1000;
     padding: 1rem 3rem;
-    overflow-y: auto;
     visibility: hidden;
     opacity: 0;
     transition: opacity 0.3s ease-in, visibility 0.3s ease-in;
-}
-
-#info::-webkit-scrollbar {
-    width: 13px;
-}
-
-#info::-webkit-scrollbar-track {
-    background-color: var(--color-green-second);
-}
-
-#info::-webkit-scrollbar-thumb {
-    background-color: rgb(27, 85, 27);
-    border-radius: 10px;
-    border: 3px solid var(--color-green-second);
-}
-
-#info::-webkit-scrollbar-thumb:hover {
-    background-color: rgb(81, 215, 81);
 }
 
 #info.show {
@@ -209,7 +190,7 @@ body {
 
 .activities {
     list-style: none;
-    height: auto;
+    height: 60%;
     overflow-y: scroll;
     overflow-x: hidden;
     margin-top: 1rem;
@@ -217,7 +198,21 @@ body {
 }
 
 .activities::-webkit-scrollbar {
-    width: 0;
+    width: 13px;
+}
+
+.activities::-webkit-scrollbar-track {
+    background-color: var(--color-green-second);
+}
+
+.activities::-webkit-scrollbar-thumb {
+    background-color: rgb(27, 85, 27);
+    border-radius: 10px;
+    border: 3px solid var(--color-green-second);
+}
+
+.activities::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(81, 215, 81);
 }
 
 .form {
@@ -673,6 +668,18 @@ body {
 /* ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓ */
 /* ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░╣ Search ╠░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ */
 /* ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓ */
+
+.search-container {
+    display: flex;
+    bottom: 0;
+    position: absolute;
+    height: 10%;
+    background-color: red;
+}
+
+#search-box {}
+
+#search-btn {}
 
 /* .suggestions-box {
     position: absolute;
